@startuml backend-internals

interface Backend <<runtime>> {
  + allocate(shape, dtype): RuntimeTensor
  + read(tensor): ArrayBufferView | Promise<ArrayBufferView>
  + write(tensor, data): void
  + execute(node, inputs[], outputs[]): void
  + dispose(tensor): void
}

interface RuntimeStorage <<runtime>> {
  + buffer: TypedArray | WasmTensorHandle | GPUBuffer
  + byteLength: number
}

interface RuntimeTensor <<runtime>> {
  + storage: RuntimeStorage
  + shape: (number | null)[]
  + strides: number[]
  + offset: number
  + dtype: float32 | int32 | bool
  + isView?: boolean
}

class CPUBackend {
  - registry: Map<string, CPUKernel>
  --
  Synchronous. Float32Array buffers.
  Correctness oracle for all other backends.
}

class WASMBackend {
  - module: MinitensorWasmModule
  - registry: Map<string, WASMKernel>
  --
  Tensor memory in WASM heap (pointer handles).
  Rust kernels via wasm-bindgen.
  Avoids JS/WASM boundary per element.
}

class WebGPUBackend {
  - device: GPUDevice
  - registry: Map<string, WebGPUKernel>
  - pipelineCache: Map<string, GPUComputePipeline>
  --
  Tensor memory in GPUBuffers.
  WGSL compute shaders with strided access.
  read() is async (GPU readback).
}

RuntimeTensor *-- RuntimeStorage

Backend <|.. CPUBackend
Backend <|.. WASMBackend
Backend <|.. WebGPUBackend
CPUBackend ..> RuntimeTensor
WASMBackend ..> RuntimeTensor
WebGPUBackend ..> RuntimeTensor

@enduml
